<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding"
    android:background="@android:color/holo_blue_dark"
    tools:context=".AboutActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/layout_padding"
        android:paddingBottom="@dimen/layout_padding"
        android:text="@string/app_name"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="24sp" />

    <TextView
        style="@style/AboutText"
        android:text="@string/about_creation" />

    <TextView
        style="@style/AboutText"
        android:text="@string/about_description" />

    <TextView
        style="@style/AboutText"
        android:text="@string/about_tmdb_attrition"
        android:textStyle="bold" />

</LinearLayout>