<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSelectorBackground"
    tools:context=".MovieDetailsActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/detailTitleBackground"
            android:paddingStart="@dimen/detail_large_padding"
            android:paddingLeft="@dimen/detail_large_padding"
            android:paddingTop="@dimen/detail_extra_large_padding"
            android:paddingEnd="@dimen/detail_large_padding"
            android:paddingRight="@dimen/detail_large_padding"
            android:paddingBottom="@dimen/detail_extra_large_padding"
            android:textColor="@android:color/white"
            android:textSize="@dimen/detail_title_text_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/poster_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/movie_backdrop_poster"
            android:foregroundGravity="top"
            android:paddingBottom="@dimen/detail_normal_padding"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_text_view" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/detail_summary_fragment"
            android:name="com.larsonapps.popularmovies.MovieDetailSummaryFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/poster_image_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/detail_summary_fragment" />

        <TextView
            style="@style/DetailTitle"
            android:id="@+id/tv_trailer"
            android:text="@string/trailers"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintLeft_toLeftOf="parent" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/detail_video_fragment"
            android:name="com.larsonapps.popularmovies.MovieDetailVideoFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_trailer"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <View
            android:id="@+id/review_divider"
            android:layout_width="match_parent"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/detail_video_fragment"/>

        <TextView
            style="@style/DetailTitle"
            android:id="@+id/tv_review"
            android:text="@string/reviews"
            app:layout_constraintTop_toBottomOf="@id/review_divider"
            app:layout_constraintLeft_toLeftOf="parent" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/detail_review_fragment"
            android:name="com.larsonapps.popularmovies.MovieDetailReviewFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_review"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tv_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/error_message"
            android:textSize="@dimen/error_message_text_size"
            app:layout_constraintTop_toBottomOf="@id/detail_summary_fragment"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/pb_loading_indicator"
            android:layout_width="@dimen/progress_bar_height_and_width"
            android:layout_height="@dimen/progress_bar_height_and_width"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:visibility="gone" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>